# apigraph

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  Makefile  README.md  pyproject.toml
apigraph/: __init__.py  graph.py  loader.py  types.py
apigraph/conf/: __init__.py  types.py
docs/: conf.py  index.rst  requirements.txt
docs/api-docs/: apigraph.conf.rst  apigraph.rst  modules.rst
docs/reference/: index.rst  openapi-extensions.rst
openapi_orm/: loader.py  models.py
tests/: conftest.py  helpers.py  test_apigraph.py  test_chains.py  test_graph_building.py
tests/fixtures/: backlinks-components-ref.yaml  backlinks-local-operationref.yaml  backlinks-local-ref.yaml  backlinks-multiple-chain-id.yaml  backlinks-request-body-params.yaml  backlinks-request-body.yaml  backlinks-response-ref.yaml  backlinks-with-links-same-chain-id.yaml  backlinks-with-links-with-chain-id.yaml  backlinks.yaml  cross-doc-backlinks-target.yaml  cross-doc-backlinks.yaml  cross-doc-circular-ref.yaml  cross-doc-links.yaml  dependencies.yaml  invalid-backlink-no-operation-identifier.yaml  invalid-backlink-operationid-no-response-identifier.yaml  invalid-backlink-operationref-no-response-identifier.yaml  invalid-doc-duplicate-operationid.yaml  invalid-link-no-operation-identifier.yaml  invalid-parameter.yaml  invalid-security-scheme.yaml  links-local-operationref.yaml  links-local-ref.yaml  links-request-body-params.yaml  links-request-body.yaml  links-with-chain-id.yaml  links-with-cycle-in-chain.yaml  links-with-multiple-chain-id.yaml  links.yaml  parameters.yaml  security.yaml
