[tool.poetry]
name = "apigraph"
version = "0.1.0"
description = ""
authors = ["Anentropic <ego@anentropic.com>"]

[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^5.3.1"
toml = "^0.10.1"
jsonref = "^0.2"
inject = "^4.2.0"
httpx = "^0.12.1"
diskcache = "^4.1.0"
pydantic = "^1.5.1"
json-spec = "^0.10.1"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
ipython = "^7.13.0"
ipdb = "^0.13.2"
flaky = "^3.6.1"
hypothesis = "^5.10.4"
mypy = "^0.780"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
