[tool.poetry]
name = "apigraph"
version = "0.1.0"
description = ""
authors = ["Anentropic <ego@anentropic.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.4"
toml = "^0.10.1"
jsonref = "^0.2"
inject = "^4.2.0"
httpx = "^0.13"
diskcache = "^4.1.0"
pydantic = "^1.6.2"
json-spec = "^0.10.1"
networkx = "^2.5"
email-validator = "^1.1.1"
sphinx = {version = "^3.1.1", optional = true}
sphinx-autodoc-typehints ={version = "^1.11.1", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^5.4"
ipython = "^8.10.0"
ipdb = "^0.13.2"
flaky = "^3.6.1"
hypothesis = "^5.10.4"
mypy = "^0.780"
pytest-httpx = "^0.4.0"
black = "^19.10b0"
isort = "^4.3.21"
sphinx-reload = "^0.2.0"

[tool.poetry.extras]
docs = [
	"sphinx",
	"sphinx-autodoc-typehints"
]

[tool.black]
verbose = true
skip-string-normalization = false
safe = true
# NB: exclude does not work here when combined with pre-commit.

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
